--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,4 @@
-@import './Card/_card.scss'
+@import './Avatar/avatar';
+@import './Button/button';
+@import './Card/card';
+@import './Theme/theme';
