Clean lint errors for scss and remove unused code

--- a/examples/components/index.scss
+++ b/examples/components/index.scss
@@ -1,8 +1,5 @@
-@import '~devsy-components/index.scss';
+@import '~devsy-components/index';
 
-#root {
-  padding: 50px;
-}
 code {
   white-space: pre;
 }
