--- a/src/Avatar/_avatar.scss
+++ b/src/Avatar/_avatar.scss
@@ -1,3 +1,6 @@
+$avatar-size-xs: 1.6rem;
+$avatar-size-l: 4.8rem;
+
 .avatar {
   border-radius: 50%;
   display: inline-block;
@@ -12,14 +15,14 @@
 
   &.avatar--xs {
     font-size: .8rem;
-    height: 1.6rem;
-    width: 1.6rem;
+    height: $avatar-size-xs;
+    width: $avatar-size-xs;
   }
 
   &.avatar--l {
     font-size: 2rem;
-    height: 4.8rem;
-    width: 4.8rem;
+    height: $avatar-size-l;
+    width: $avatar-size-l;
   }
 
   img {
