--- a/src/Avatar/_avatar.scss
+++ b/src/Avatar/_avatar.scss
@@ -7,20 +7,23 @@ $avatar-size-l: 4.8rem;
 $avatar-size-xl: 6.4rem;
 
 .avatar {
-  align-items: center;
-  background: $avatar-background-color;
   border-radius: 50%;
   color: $avatar-font-color;
   display: inline-flex;
   font-size: 1.6rem;
   font-weight: 300;
   height: $avatar-size-m;
-  justify-content: center;
   line-height: 1;
   margin: 0;
   position: relative;
-  vertical-align: middle;
   width: $avatar-size-m;
+
+  &.avatar--no-img {
+    align-items: center;
+    background: $avatar-background-color;
+    justify-content: center;
+    vertical-align: middle;
+  }
 
   &.avatar--xs {
     font-size: .8rem;
