--- a/src/Strip/_strip.scss
+++ b/src/Strip/_strip.scss
@@ -3,13 +3,23 @@ $strip-border-color: #ccc;
 
 .strip {
   background: $strip-background-color;
-  border-left: $strip-border-color;
+  border-left: 1px solid $strip-border-color;
   display: block;
   height: 100%;
+  opacity: 0;
+  overflow: auto;
+  padding: 15px;
   position: fixed;
   right: 0;
   top: 0;
+  transform: translate3d(300px, 0, 0);
+  transition: all .3s ease;
   width: 300px;
+
+  &--opened {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 
   .button-close {
     height: 25px;
