added sample data for timeline and strip

--- a/src/Strip/_strip.scss
+++ b/src/Strip/_strip.scss
@@ -14,7 +14,7 @@ $strip-border-color: #ccc;
   top: 0;
   transform: translate3d(300px, 0, 0);
   transition: all .3s ease;
-  width: 300px;
+  width: 45%;
 
   &--opened {
     opacity: 1;
